# lab-06-multithreads

./: CMakeLists.txt
demo/: main.cpp
include/: header.hpp
sources/: source.cpp
tests/: test.cpp
